[package]
name = "ippusb_bridge"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2018"

[dependencies]
getopts = "0.2.18"
libc = "0.2.44"
rusb = "0.6.0"
sync = { path = "../../platform/crosvm/sync" } # provided by ebuild
sys_util = { path = "../../platform/crosvm/sys_util" } # provided by ebuild
tiny_http = "0.7.0"

[profile.release]
lto = true
panic = 'abort'
overflow-checks = true
opt-level = 's'
