# Copyright 2020 The Chromium OS Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//common-mk/pkg_config.gni")

group("all") {
  deps = [ ":minios" ]
}

pkg_config("target_defaults") {
  pkg_deps = [
    "libbrillo",
    "libchrome",
  ]
}

static_library("libminios") {
  configs += [ ":target_defaults" ]
  sources = [
    "minios.cc",
    "process_manager.cc",
  ]
}

executable("minios") {
  configs += [ ":target_defaults" ]
  sources = [ "main.cc" ]
  deps = [ ":libminios" ]
}
